crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/unused_suppression_has_correct_span_in_vue_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint file.vue
```

## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.vue`

```vue
<template>
  <div>{{ mdiSquareOutline }}</div>
</template>

<script lang="ts" setup>
console.log("foo");
// biome-ignore lint/correctness/noUnusedImports: migrating to biome
import { mdiSquareOutline } from "@mdi/js";
</script>
```

# Emitted Messages

```block
file.vue:7:1 suppressions/unused ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Suppression comment has no effect. Remove the suppression or make sure you are suppressing the correct rule.
  
    5 │ <script lang="ts" setup>
    6 │ console.log("foo");
  > 7 │ // biome-ignore lint/correctness/noUnusedImports: migrating to biome
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    8 │ import { mdiSquareOutline } from "@mdi/js";
    9 │ </script>
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 warning.
```
