crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/use_import_type_not_triggered_for_enum_in_template.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `file.vue`

```vue
<script setup lang="ts">
import { Component, FooEnum } from './types';
</script>
<template>
  <Component />
  <div>{{ FooEnum.Foo }}</div>
</template>
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
