crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/use_import_type_works_as_expected.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{
  "html": {
    "linter": { "enabled": true },
    "experimentalFullSupportEnabled": true
  }
}
```

## `file.vue`

```vue
<script lang="ts">
import type Foo from "zod";
</script>

<template>
    <span>{hello}</span>
</template>

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
