crates/biome_cli/tests/snapshots/main_cases_handle_vue_files/vue_compiler_macros_as_globals.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint file.vue
```

## `file.vue`

```vue
<script setup lang="ts">
// These are magic vue macros, and should be treated as globals.
defineProps(['foo'])
defineEmits(['change', 'delete'])
defineModel()

const a = 1
defineExpose({
		a,
})

defineOptions({
		inheritAttrs: false,
})

const slots = defineSlots<{
		default(props: { msg: string }): any
}>()

</script>
<template></template>
```

# Emitted Messages

```block
file.vue:17:36 lint/suspicious/noExplicitAny ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! Unexpected any. Specify a different type.
  
    16 │ const slots = defineSlots<{
  > 17 │ 		default(props: { msg: string }): any
       │ 		                                 ^^^
    18 │ }>()
    19 │ 
  
  i any disables many type checking rules. Its use should be avoided.
  

```

```block
file.vue:16:7 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable slots is unused.
  
    14 │ })
    15 │ 
  > 16 │ const slots = defineSlots<{
       │       ^^^^^
    17 │ 		default(props: { msg: string }): any
    18 │ }>()
  
  i Unused variables are often the result of typos, incomplete refactors, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend slots with an underscore.
  
    13 13 │   })
    14 14 │   
    15    │ - const·slots·=·defineSlots<{
       15 │ + const·_slots·=·defineSlots<{
    16 16 │   		default(props: { msg: string }): any
    17 17 │   }>()
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 warnings.
```
